<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Taiwan ID Checker</string>
    <string name="ID_String">Taiwan ID</string>
    <string name="btn_clear">Clear!</string>
    <string name="msg_ID_invalid">Invalid!</string>
    <string name="msg_ID_valid">Correct!</string>
</resources>
