<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mouse.kevin.idchecker.MainActivity">

    <EditText
        android:id="@+id/input_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/main_editView_top_margin"
        android:ems="10"
        android:hint="@string/ID_String"
        android:maxLines="1"
        android:minLines="1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/input_ID"
        android:layout_toEndOf="@+id/input_ID"
        android:layout_toRightOf="@+id/input_ID"
        android:text="@string/btn_clear"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/text_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_ID"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</RelativeLayout>
